<resources>

    <string name="cancel">Cancelar</string>
    <string name="search_backwards">Pesquisar para trás</string>
    <string name="search_forwards">Buscar encaminhamentos</string>
    <string name="search_document">Busca</string>
    <string name="enter_password">Enter password</string>
    <string name="text_not_found">Texto não encontrado</string>
    <string name="searching_">Procurando&#8230;</string>
    <string name="no_further_occurrences_found">Nenhuma outra ocorrência encontrada</string>
    <string name="search">Busca</string>
    <string name="print">Print</string>
    <string name="dismiss">Dispensar</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="print_failed">Print failed</string>
    <string name="document_has_changes_save_them_">Documento tem alterações. Salve-os?</string>
    <string name="cannot_open_document">Não é possível abrir o documento</string>
    <string name="cannot_open_document_Reason">Não é possível abrir o documento: %1$s</string>
    <string name="cannot_open_file_Path">Não pode abrir o arquivo: %1$s</string>
    <string name="cannot_open_buffer">Não é possível abrir o buffer</string>
    <string name="fill_out_text_field">Preencha o campo de texto</string>
    <string name="okay">OK</string>
    <string name="choose_value">Escolha o valor</string>
    <string name="not_supported">Não suportado</string>
    <string name="more">Mais</string>
    <string name="format_currently_not_supported">Format currently not supported</string>

    <string name="one_page_of_count">%1$d of %2$d</string>
    <string name="two_pages_of_count">%1$d-%2$d of %3$d</string>
    <string name="finish">Terminar</string>
    <string name="copy">Copiar</string>
    <string name="highlight">Realçar</string>
    <string name="underline">Sublinhada</string>
    <string name="draw">Desenhar</string>
    <string name="strike_through">StrikeThrough</string>
    <string name="edit">Editar</string>
    <string name="select_text">Select text</string>
    <string name="delete">Excluir</string>
    <string name="select_annotation">Select annotation</string>

</resources>
